# autogen-memory-store

./: .env.sample  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
autogen_memory_store/: hosting.py  main.py  server.py
autogen_memory_store/protocols/: i_memory_store.py
autogen_memory_store/services/: azure_openai_service.py  memory_store.py
tests/autogen_memory_store/services/: test_azure_openai_service.py  test_memory_store.py
