[project]
name = "autogen_memory_store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-ext>=0.6.1",
    "azure-core>=1.34.0",
    "azure-identity>=1.23.0",
    "lagom>=2.7.5",
    "openai>=1.90.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
]

[tool.ruff]
exclude = ["typings"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["typings", ".venv", ".vscode", ".git"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "autogen_memory_store/hosting.py",
    "autogen_memory_store/protocols/*",
    "autogen_memory_store/main.py",
    "autogen_memory_store/server.py"
]
